--- a/package.json
+++ b/package.json
@@ -6,23 +6,35 @@
   "scripts": {
     "build": "tsc --build tsconfig.json && tsc-alias -p tsconfig.json",
     "start:dev": "nodemon",
-    "start:build": "node ./dist/index.js"
+    "start:build": "node ./dist/index.js",
+    "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@prisma/client": "^6.8.2",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.18",
+    "concurrently": "^9.1.2",
     "dotenv": "^16.5.0",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10",
+    "pm2": "^6.0.6",
+    "prisma": "^6.8.2",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
