--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --build tsconfig.json && tsc-alias -p tsconfig.json",
-    "start:dev": "nodemon",
-    "start:build": "node ./dist/index.js",
+    "build": "rimraf dist && tsc --build tsconfig.json && tsc-alias -p tsconfig.json",
+    "start:dev": "npm run build && concurrently \"npm tsc -w \" \"nodemon --exec ts-node src/index.ts\"",
+    "start:build": "npm run build && node ./dist/index.js",
     "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
