--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rimraf dist && tsc --build tsconfig.json && tsc-alias -p tsconfig.json",
     "start:dev": "npm run build && concurrently \"npm tsc -w \" \"nodemon --exec ts-node src/index.ts\"",
-    "start:build": "npm run build && node ./dist/index.js",
+    "start:build": "npm run build && node ./dist/src/index.js",
     "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
